--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,9 +9,12 @@ spring:
       path: /h2-console
   datasource:
     driver-class-name: org.h2.Driver
-    url: jdbc:h2:mem:testdb
-    username: sa
+    url: jdbc:h2:mem:hairdresser
+    username:
     password:
+    initialization-mode: always
   jpa:
-    show-sql: true
-    database-platform: org.hibernate.dialect.H2Dialectgit
+    hibernate:
+      ddl-auto: none
+    show-sql: false
+    database-platform: org.hibernate.dialect.H2Dialect
