--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,11 +6,11 @@ spring:
   h2:
     console:
       enabled: true
-      path: /h2-console
+      path: /h2
   datasource:
     driver-class-name: org.h2.Driver
-    url: jdbc:h2:mem:hairdresser
-    username:
+    url: jdbc:h2:mem:testdb
+    username: sa
     password:
     initialization-mode: always
   jpa:
